--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev" : "nodemon node src/index.js"
+    "dev": "nodemon node src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
@@ -18,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.29",
     "mongoose": "^8.13.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.10"
   },
   "devDependencies": {
     "prettier": "^3.5.3"
